# upbit-mcp-server

./: .dockerignore  Dockerfile  LICENSE  README.md  config.py  format_output.py  main.py  mcp_context.py  mcp_logging.py  pyproject.toml  requirements.txt  sse_auth.py  upbit_client.py
.github/workflows/: docker-publish.yml
docs/: mcp-tools.md  upbit-sdk-mcp-coverage.md
resources/: get_market_list.py
tools/: cancel_open_orders.py  cancel_order.py  create_order.py  create_withdraw.py  get_accounts.py  get_candles.py  get_deposit_coin_address.py  get_deposits_withdrawals.py  get_market_summary.py  get_order.py  get_order_chance.py  get_orderbook.py  get_orders.py  get_ticker.py  get_trades.py  get_wallet_status.py  list_withdraw_coin_addresses.py  technical_analysis.py
